k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mithril-rev
  labels:
    app.kubernetes.io/name: mithril-rev
