k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mithril-rev
  namespace: mithril-rev
  labels:
    app: mithril-rev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: mithril-rev
